tests/specs/ClassConstructor.txt
# mod.ts
export class Class {
  constructor(public a, readonly b) {
    // requires a jsdoc because it has params
  }
}

/** doc2 */
export class Class2 {
  constructor() {
    // won't require a jsdoc because there's no params
  }
}

/** doc3 */
export class Class3 {
  private constructor(value: string) {
    // won't require a jsdoc because it's private
  }
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   constructor(public a, readonly b) {
  |   ^


# output.txt
Defined in file:///mod.ts:1:1

class Class

  constructor(public a, readonly b)

Defined in file:///mod.ts:8:1

class Class2
  doc2

  constructor()

Defined in file:///mod.ts:15:1

class Class3
  doc3

  private constructor(value: string)


# output.json
[
  {
    "kind": "class",
    "name": "Class",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "classDef": {
      "isAbstract": false,
      "constructors": [
        {
          "accessibility": null,
          "hasBody": true,
          "name": "constructor",
          "params": [
            {
              "accessibility": "public",
              "kind": "identifier",
              "name": "a",
              "optional": false,
              "tsType": null
            },
            {
              "kind": "identifier",
              "name": "b",
              "optional": false,
              "tsType": null,
              "readonly": true
            }
          ],
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 23
          }
        }
      ],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  },
  {
    "kind": "class",
    "name": "Class2",
    "location": {
      "filename": "file:///mod.ts",
      "line": 8,
      "col": 0,
      "byteIndex": 124
    },
    "declarationKind": "export",
    "jsDoc": {
      "doc": "doc2"
    },
    "classDef": {
      "isAbstract": false,
      "constructors": [
        {
          "accessibility": null,
          "hasBody": true,
          "name": "constructor",
          "params": [],
          "location": {
            "filename": "file:///mod.ts",
            "line": 9,
            "col": 2,
            "byteIndex": 148
          }
        }
      ],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  },
  {
    "kind": "class",
    "name": "Class3",
    "location": {
      "filename": "file:///mod.ts",
      "line": 15,
      "col": 0,
      "byteIndex": 238
    },
    "declarationKind": "export",
    "jsDoc": {
      "doc": "doc3"
    },
    "classDef": {
      "isAbstract": false,
      "constructors": [
        {
          "accessibility": "private",
          "hasBody": true,
          "name": "constructor",
          "params": [
            {
              "kind": "identifier",
              "name": "value",
              "optional": false,
              "tsType": {
                "repr": "string",
                "kind": "keyword",
                "keyword": "string"
              }
            }
          ],
          "location": {
            "filename": "file:///mod.ts",
            "line": 16,
            "col": 2,
            "byteIndex": 262
          }
        }
      ],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
